# accoresysface

./: CMakeLists.txt  compare.cpp  compare_blob_data.cpp  main.cpp  readme.md  test.cpp
AccoreNet/: CMakeLists.txt
inc/: asr.hpp  blob.hpp  blob_.hpp  caffe.hpp  caffe.pb.h  caffe.proto  common.hpp  compare.hpp  compare_blob_data.hpp  layer.hpp  net.hpp  transformer_param.hpp  upgrade_proto.hpp
inc/armadillo_bits/: config.hpp
inc/layers/: batch_norm_layer.h  batch_norm_layer.hpp  conv_layer.hpp  fc_layer.hpp  input_layer.hpp  mylayer.h  pooling_layer.h  pooling_layer.hpp  prelu_layer.hpp  relu_layer.hpp  scale_layer.hpp  softmax_layer.hpp
lib/linux_x64/: libarmadillo.so.9.300.2
src/: blob.cpp  blob_.cpp  caffe.pb.cc  compare.cpp  compare_blob_data.cpp  layer.cpp  net.cpp  upgrade_proto.cpp
src/layers/: batch_norm_layer.cpp  conv_layer.cpp  fc_layer.cpp  flatten_layer.cpp  input_layer.cpp  pooling_layer.cpp  prelu_layer.cpp  relu_layer.cpp  scale_layer.cpp  softmax_layer.cpp
